--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,8 +59,8 @@
     <!-- Quantity Selector -->
     <string name="label_increase">Increase</string>
     <string name="label_decrease">Decrease</string>
-    <string name="work_in_progress">Sample Profile Page</string>
-    <string name="grab_beverage">Grab a beverage and test these functions!</string>
+    <string name="work_in_progress">SDK Details and Operations</string>
+    <string name="grab_beverage">Version</string>
     <string name="see_more">SEE MORE</string>
     <string name="see_less">SEE LESS</string>
     <string name="remove_item">Remove Item</string>
